@@ -97,7 +97,7 @@
   from.  For example, if the layout reflects the character of a piece,
   then it is easier to interpret.  If it is tightly spaced, it will
   take less pages, reducing the number of page-turns.  If a system (a
-  &ldquo;line&rdquo) has a unique horizontal layout, then it is more
+  &ldquo;line&rdquo;) has a unique horizontal layout, then it is more
   easily found back after looking away at the conductor.  A part which
   is printed with heavy symbols and thick lines will be easier to read
   from a distance.
@@ -227,25 +227,25 @@ You can do several things
 
 <h3>It's open source, so I should compile it from source?</h3>
 <p>
-  No.  Building LilyPond is a rather involved process.  Unless you really
-  know what you are doing, it is better to use a binary package.
+  No.  Building LilyPond is a rather involved process.  Unless you
+  really know what you are doing it is better to use a binary package.
 </p>
 
 <h3>Which version should I use?</h3>
 <p>
   We use the version numbering scheme that is also used for the Linux
-  kernel.  This means that even minor versions (1.4, 1.6, etc.) are
+  kernel.  This means that even minor versions (2.4, 2.6, etc.) are
   stable, and active development is done on the uneven minor versions
-  (1.5, 1.7).  Unless you have special needs, it is best to stick to the
-  stable branch.
+  (2.5, 2.7).  Unless you have special needs it is best to stick to
+  the stable branch.
 </p>
 
 <h3>How is LilyPond used?</h3>
 
 <p>
   LilyPond is a compiler: the music is encoded in a <tt>.ly</tt> file.
-  When LilyPond is run on it, the input is transpormed into music
-  notation, which is written to disk as PostScript or SVG, and
+  When LilyPond is run on it the input is transformed into music
+  notation, which is written to disk as PostScript or SVG and
   postprocessed to PDF and PNG.
 </p>
 
@@ -499,6 +499,8 @@ There are also different, non-graphical interfaces:
   course you can also write to the <a
   href="http://mail.gnu.org/mailman/listinfo/lilypond-user">lilypond-user</a>
   list for help.
+  <!--
+      !-->
 </p>
 
 <h3>Help, I can't get it to do something.  Where do I get help?</h3>
