@@ -84,7 +84,7 @@
   <li>Tuplets in arbitrary ratios.</li>
   <li>Polymetric notation.</li>
   <li>Mensural notation.</li>
-  <li>Automatic cue-notes,.</li>
+  <li>Automatic cue-notes.</li>
   <li>Automatic part combining for orchestral scores.</li>
   <li>Quarter tone accidentals.</li>
   <li>Ambituses.</li>
